fix: heading issue and tooltip overlap issue fix

--- a/component/src/styles/ui-component.css
+++ b/component/src/styles/ui-component.css
@@ -112,7 +112,8 @@
 }
 
 .icon-dropdown select {
-  display: none; /* Hide the native select element */
+  display: none;
+  /* Hide the native select element */
 }
 
 .icon-dropdown .dropbtn {
@@ -166,7 +167,7 @@
 
 .icon-dropdown.open-right .icon-dropdown-content {
   margin-left: 8px;
-  left: 100%; /* Position the dropdown to the right of the button */
+  left: 100%;
   top: 0;
 }
 
@@ -182,8 +183,6 @@
 
 .tooltip {
   height: auto;
-  visibility: gone;
-  visibility: visible;
   background-color: black;
   font-size: 12px;
   color: #fff;
@@ -192,20 +191,21 @@
   border-radius: 4px;
   position: absolute;
   z-index: 20;
-  /*bottom: 125%; Position the tooltip above the element */
-  top: 95%; /* Position the tooltip below the element */
+  top: -85%;
   left: 50%;
   transform: translateX(-50%);
   white-space: nowrap;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   opacity: 0;
+  display: none;
   transition: opacity 0.3s;
 }
 
 .tooltip-container:hover .tooltip {
   opacity: 1;
-  visibility: visible;
+  display: block;
 }
+
 /* 
  ======================================== 
  DIALOG
